// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inspector Data View component should render empty state 1`] = `
<component
  adapters={
    Object {
      "data": DataAdapter {
        "_events": Object {
          "change": [Function],
        },
        "_eventsCount": 1,
        "_maxListeners": undefined,
        "tabular": [Function],
        "tabularOptions": Object {},
        Symbol(shapeMode): false,
        Symbol(kCapture): false,
      },
    }
  }
  title="Test Data"
>
  <DataViewComponent
    adapters={
      Object {
        "data": DataAdapter {
          "_events": Object {
            "change": [Function],
          },
          "_eventsCount": 1,
          "_maxListeners": undefined,
          "tabular": [Function],
          "tabularOptions": Object {},
          Symbol(shapeMode): false,
          Symbol(kCapture): false,
        },
      }
    }
    title="Test Data"
    uiSettings={Object {}}
  >
    <EuiFlexGroup
      alignItems="center"
      justifyContent="center"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        style={
          Object {
            "height": "100%",
          }
        }
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiPanel
              className="eui-textCenter"
            >
              <div
                className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow eui-textCenter"
              >
                <EuiLoadingChart
                  size="m"
                >
                  <span
                    className="euiLoadingChart euiLoadingChart--medium"
                  >
                    <span
                      className="euiLoadingChart__bar"
                    />
                    <span
                      className="euiLoadingChart__bar"
                    />
                    <span
                      className="euiLoadingChart__bar"
                    />
                    <span
                      className="euiLoadingChart__bar"
                    />
                  </span>
                </EuiLoadingChart>
                <EuiSpacer
                  size="s"
                >
                  <div
                    className="euiSpacer euiSpacer--s"
                  />
                </EuiSpacer>
                <EuiText
                  size="s"
                >
                  <div
                    className="euiText euiText--small"
                  >
                    <p>
                      <FormattedMessage
                        defaultMessage="Gathering data"
                        id="inspector.data.gatheringDataLabel"
                      >
                        Gathering data
                      </FormattedMessage>
                    </p>
                  </div>
                </EuiText>
              </div>
            </EuiPanel>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
  </DataViewComponent>
</component>
`;

exports[`Inspector Data View component should render loading state 1`] = `
<component
  adapters={
    Object {
      "data": DataAdapter {
        "_events": Object {
          "change": [Function],
        },
        "_eventsCount": 1,
        "_maxListeners": undefined,
        "tabular": undefined,
        "tabularOptions": undefined,
        Symbol(shapeMode): false,
        Symbol(kCapture): false,
      },
    }
  }
  title="Test Data"
>
  <DataViewComponent
    adapters={
      Object {
        "data": DataAdapter {
          "_events": Object {
            "change": [Function],
          },
          "_eventsCount": 1,
          "_maxListeners": undefined,
          "tabular": undefined,
          "tabularOptions": undefined,
          Symbol(shapeMode): false,
          Symbol(kCapture): false,
        },
      }
    }
    title="Test Data"
    uiSettings={Object {}}
  >
    <EuiFlexGroup
      alignItems="center"
      justifyContent="center"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        style={
          Object {
            "height": "100%",
          }
        }
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiPanel
              className="eui-textCenter"
            >
              <div
                className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow eui-textCenter"
              >
                <EuiLoadingChart
                  size="m"
                >
                  <span
                    className="euiLoadingChart euiLoadingChart--medium"
                  >
                    <span
                      className="euiLoadingChart__bar"
                    />
                    <span
                      className="euiLoadingChart__bar"
                    />
                    <span
                      className="euiLoadingChart__bar"
                    />
                    <span
                      className="euiLoadingChart__bar"
                    />
                  </span>
                </EuiLoadingChart>
                <EuiSpacer
                  size="s"
                >
                  <div
                    className="euiSpacer euiSpacer--s"
                  />
                </EuiSpacer>
                <EuiText
                  size="s"
                >
                  <div
                    className="euiText euiText--small"
                  >
                    <p>
                      <FormattedMessage
                        defaultMessage="Gathering data"
                        id="inspector.data.gatheringDataLabel"
                      >
                        Gathering data
                      </FormattedMessage>
                    </p>
                  </div>
                </EuiText>
              </div>
            </EuiPanel>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
  </DataViewComponent>
</component>
`;
